# s8_islands

./: README.md  pyproject.toml
data/: islands2  islands3
src/adapters/: read_file.py
src/core/: determine_islands.py  islands_operations.py
src/utils/: types.py
tests/: __init__.py  test_islands_operations.py  test_read_file.py
tests/assets/: bad_islands1  bad_islands2  islands0  islands4  islands5
