[tool.poetry]
name = "silent8_islands"
version = "0.1.0"
description = ""
authors = ["ArturPrzybysz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0" # TODO: move to dev dependencies

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
